<resources>
    <!-- Activity labels -->
    <string name="app_name">Droid Cafe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_order">Order Registration</string>

    <string name="intro_text">Droid desserts!</string>

    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_msg">You ordered donut.</string>
    <string name="ice_cream_msg">You ordered ice cream sandwich.</string>
    <string name="froyo_msg">You ordered FroYo.</string>
    <string name="order_message">There is no orders yet</string>
    <string name="name_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_text">Address</string>
    <string name="enter_address_hint">Enter you address here</string>
    <string name="enter_phone_hint">Enter you phone number</string>
    <string name="note_text">Note</string>
    <string name="notes_hint">Leave your note</string>
    <string name="delivery_text">Choose a delivery method:</string>
    <string name="same_day_text">Same day messenger service</string>
    <string name="next_day_text">Next day ground delivery</string>
    <string name="pick_up_text">Pick up</string>

    <!-- Action titles -->
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

    <!-- Toast messages -->
    <string name="action_status_message">You clicked status</string>
    <string name="action_favorites_message">You clicked favorites</string>
    <string name="action_contact_message">You clicked contact</string>
    <string name="action_settings_message">You clicked settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- General Preferences -->
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your order history</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_default_display_name">Vasya Pupkin</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to order messages</string>
</resources>
